@startuml

title __ANDROIDASSIGNMENTS's Class Diagram__\n

  namespace com.example.androidassignments {
    class com.example.androidassignments.ChatWindow {
        ~ ChatView : ListView
        ~ SendButton : Button
        ~ TextMessageBox : EditText
        - TextMessageList : ArrayList<String>
        + SendButton_OnClick()
        # onCreate()
    }
  }
  

  namespace com.example.androidassignments {
    class com.example.androidassignments.ChatWindow.ChatAdapter {
        + ChatAdapter()
        + getCount()
        + getItem()
        + getView()
    }
  }
  

  namespace com.example.androidassignments {
    class com.example.androidassignments.ListItemsActivity {
        {static} # ACTIVITY_NAME : String
        {static} # REQUEST_IMAGE_CAPTURE : int
        ~ CamButton : ImageButton
        ~ ListCheckBox : CheckBox
        ~ ListSwitch : Switch
        + CamButton_Handler()
        + CheckBoxChanged()
        + SwitchChanged()
        # onActivityResult()
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
    }
  }
  

  namespace com.example.androidassignments {
    class com.example.androidassignments.LoginActivity {
        {static} # ACTIVITY_NAME : String
        {static} # EMAIL_KEY : String
        {static} # PREFERENCES_FILENAME : String
        - LoginButton : Button
        - LoginText : EditText
        - PasswordText : EditText
        - preferences : SharedPreferences
        + LoginButton_Handler()
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
        {static} - IsEmailValid()
    }
  }
  

  namespace com.example.androidassignments {
    class com.example.androidassignments.MainActivity {
        {static} # ACTIVITY_NAME : String
        {static} # REQUEST_CODE : int
        - MainButton : Button
        + MainButton_Handler()
        + StartButton_OnClick()
        + print()
        # onActivityResult()
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
    }
  }
  

  com.example.androidassignments.ChatWindow -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidassignments.ChatWindow o-- com.example.androidassignments.ChatWindow.ChatAdapter : messageAdapter
  com.example.androidassignments.ChatWindow +-down- com.example.androidassignments.ChatWindow.ChatAdapter
  com.example.androidassignments.ChatWindow.ChatAdapter -up-|> android.widget.ArrayAdapter
  com.example.androidassignments.ListItemsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidassignments.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidassignments.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
